<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.dmanluc.cabifymarket.presentation.feature.checkout.MarketCheckoutViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/checkoutCoordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">

        <TextView
            android:id="@+id/emptyProductsCartTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/market_checkout_fragment_empty_cart"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:showWhenEmptyCart="@{viewModel.productsCart}"
            tools:visibility="visible" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/cartProductsRecycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:nestedScrollingEnabled="true"
            android:paddingTop="8dp"
            android:paddingBottom="66dp"
            android:scrollbars="vertical"
            app:cartProductItems="@{viewModel.productsCart}"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/checkoutOrderInfoBottomSheet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:background="@android:color/white"
            android:elevation="4dp"
            app:behavior_hideable="false"
            app:behavior_peekHeight="64dp"
            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/checkoutOrderInfo"
                style="@style/PrimaryDarkBackground"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true"
                android:padding="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/checkoutOrderInfoTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:gravity="start|center_vertical"
                    android:maxLines="1"
                    android:text="@string/market_overview_fragment_bottom_sheet_total_order_summary"
                    android:textAllCaps="true"
                    android:textColor="@color/colorAccent"
                    android:textSize="21sp"
                    app:layout_constraintBaseline_toBaselineOf="@id/checkoutOrderInfoTotalPrice"
                    app:layout_constraintEnd_toStartOf="@id/sliderIcon"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/sliderIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="32dp"
                    android:src="@drawable/ic_unfold_more_black_24dp"
                    android:tint="@color/colorAccent"
                    app:layout_constraintEnd_toStartOf="@id/checkoutOrderInfoTotalPrice"
                    app:layout_constraintStart_toEndOf="@id/checkoutOrderInfoTitle"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/checkoutOrderInfoTotalPrice"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:maxLines="1"
                    android:textColor="@color/colorAccent"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/sliderIcon"
                    app:layout_constraintTop_toTopOf="parent"
                    app:totalCartPrice="@{viewModel.productsCart}"
                    tools:text="100,50 €" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/checkoutOrderSubtotalTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="8dp"
                android:gravity="start|center_vertical"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@id/checkoutOrderDeliveryTitle"
                app:layout_constraintEnd_toStartOf="@id/checkoutOrderSubtotalPrice"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/checkoutOrderInfo"
                app:totalCartItems="@{viewModel.productsCart}" />

            <TextView
                android:id="@+id/checkoutOrderSubtotalPrice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:gravity="end|center_vertical"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                app:layout_constraintBaseline_toBaselineOf="@id/checkoutOrderSubtotalTitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/checkoutOrderSubtotalTitle"
                app:totalCartPrice="@{viewModel.productsCart}"
                tools:text="100,50 €" />

            <TextView
                android:id="@+id/checkoutOrderDeliveryTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="24dp"
                android:gravity="start|center_vertical"
                android:text="@string/market_overview_fragment_bottom_sheet_delivery_title"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@id/cartPayment"
                app:layout_constraintEnd_toStartOf="@id/checkoutOrderDeliveryPrice"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/checkoutOrderSubtotalTitle" />

            <TextView
                android:id="@+id/checkoutOrderDeliveryPrice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:gravity="end|center_vertical"
                android:text="@string/market_overview_fragment_bottom_sheet_delivery_price"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBaseline_toBaselineOf="@id/checkoutOrderDeliveryTitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/checkoutOrderDeliveryTitle" />

            <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
                android:id="@+id/cartPayment"
                style="@style/AccentRoundButton"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_gravity="bottom"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="20dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/market_overview_fragment_bottom_sheet_payment_button"
                android:textColor="@color/colorAccent"
                android:textSize="19sp"
                android:textStyle="bold"
                app:enableCheckout="@{viewModel.productsCart}"
                app:spinning_bar_width="2dp"
                app:spinning_bar_color="#FFF"
                app:spinning_bar_padding="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/checkoutOrderDeliveryTitle" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>