...
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp"
                android:visibility="gone"
                app:layout_constraintBaseline_toBaselineOf="@id/productsTotalPrice"
                app:layout_constraintEnd_toStartOf="@id/removeProductFromCart"
                app:layout_constraintStart_toEndOf="@id/horizontalBarrier"
                app:layout_constraintTop_toBottomOf="@id/bottomDivider"
                tools:text="45,35€"
                tools:visibility="visible" />

            <Button
...
